# switchboard-ngx

./: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml  switchboard.db.bak
.github/workflows/: frontend-ci.yml  rust-ci.yml
apps/web/: .gitignore  bunfig.toml  flake.nix  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  api.ts  app.css  connectionStore.ts  index.css  index.tsx  theme.css  vite-env.d.ts
apps/web/src/components/: ChatRow.tsx  Chip.tsx  ColorPicker.tsx  ColoredTextarea.tsx  Composer.tsx  ContextMenu.tsx  CreateInline.tsx  DropIndicator.tsx  FolderNode.tsx  GroupChatManager.tsx  LatexRenderer.tsx  MainArea.tsx  ModelSelector.tsx  MoveToPopover.tsx  OnlineIndicator.tsx  ProfileModal.tsx  SendButton.tsx  Sidebar.tsx  SidebarFooter.tsx  SidebarNewChat.tsx  SidebarNewFolder.tsx  SidebarSearch.tsx  SidebarThreads.tsx  SidebarTree.tsx  ThemeToggle.tsx  TopRightControls.tsx  UserPill.tsx  UserProfileDialog.tsx  WebSocketStatusIndicator.tsx  dnd.ts  sidebar-folders.css  sidebarStore.ts  sidebarTypes.ts
apps/web/src/components/model-picker/: CapabilityBadge.tsx  FooterBar.tsx  ModelItem.tsx  ModelList.tsx  ModelPickerPanel.tsx  ModelSearch.tsx  ProviderIcon.tsx  model-picker.css  models.ts
apps/web/src/contexts/: ThemeContext.tsx
apps/web/src/hooks/: useSocket.ts
apps/web/src/themes/: README.md  theme-config.css
apps/web/src/types/: chat.ts  css.d.ts  session.ts
backend/: Cargo.toml  flake.nix  switchboard.db.bak
backend/apps/: Cargo.toml  README.md
backend/apps/apps/: Cargo.toml
backend/apps/apps/src/: main.rs
backend/apps/server/: Cargo.toml
backend/apps/server/src/: main.rs
backend/apps/src/: main.rs
backend/apps/test-app/: Cargo.toml  README.md
backend/apps/test-app/src/: main.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: lib.rs
backend/crates/auth/tests/: authenticator_tests.rs
backend/crates/backend-api/: Cargo.toml
backend/crates/backend-api/apps/api-test-app/: Cargo.toml
backend/crates/backend-api/src/: docs.rs  error.rs  lib.rs  state.rs  util.rs
backend/crates/backend-api/src/routes/: attachments.rs  auth.rs  chat.rs  chats.rs  folders.rs  health.rs  messages.rs  mod.rs  models.rs  notifications.rs  permissions.rs  rest.rs  users.rs  websocket.rs  websocket_handlers.rs
backend/crates/backend-api/src/services/: README.md  attachment.rs  auth.rs  chat.rs  error.rs  folder.rs  invite.rs  member.rs  message.rs  mod.rs  notification.rs  permission.rs  test_utils.rs
backend/crates/backend-api/tests/: api_tests.rs
backend/crates/chats/: Cargo.toml
backend/crates/chats/src/: lib.rs
backend/crates/chats/src/api/: attachment.rs  chat.rs  invite.rs  member.rs  message.rs  mod.rs  websocket.rs
backend/crates/chats/src/entities/: attachment.rs  chat.rs  invite.rs  member.rs  message.rs  mod.rs
backend/crates/chats/src/repositories/: attachment_repository.rs  chat_repository.rs  invite_repository.rs  member_repository.rs  message_repository.rs  mod.rs
backend/crates/chats/src/services/: attachment_service.rs  chat_service.rs  completion_service.rs  invite_service.rs  member_service.rs  message_service.rs  mod.rs
backend/crates/chats/src/types/: errors.rs  events.rs  mod.rs  requests.rs  responses.rs
backend/crates/chats/src/utils/: mod.rs  permissions.rs  validation.rs
backend/crates/chats/tests/: attachment_tests.rs  chat_tests.rs  integration_tests.rs  message_tests.rs  mod.rs
backend/crates/config/: Cargo.toml  switchboard.example.toml
backend/crates/config/src/: lib.rs
backend/crates/config/tests/: test_plan.rs
backend/crates/database/: Cargo.toml
backend/crates/database/src/: connection.rs  lib.rs  migrations.rs
backend/crates/database/src/entities/: attachment.rs  chat.rs  invite.rs  member.rs  message.rs  mod.rs  notification.rs  session.rs  settings.rs  user.rs
backend/crates/database/src/repos/: attachment_repository.rs  chat_repository.rs  invite_repository.rs  member_repository.rs  message_repository.rs  mod.rs  notification_repository.rs  session_repository.rs  settings_repository.rs  user_repository.rs
backend/crates/database/src/types/: errors.rs  mod.rs
backend/crates/gateway/: Cargo.toml
backend/crates/gateway/src/: error.rs  lib.rs  middleware.rs  state.rs
backend/crates/gateway/src/rest/: attachment.rs  auth.rs  chat.rs  folders.rs  invite.rs  member.rs  message.rs  mod.rs  notifications.rs  permissions.rs
backend/crates/gateway/src/websocket/: chat.rs  mod.rs  user.rs  websocket.rs
backend/crates/orchestrator/: Cargo.toml
backend/crates/orchestrator/src/: lib.rs
backend/crates/orchestrator/tests/: test_plan.rs
backend/crates/runtime/: Cargo.toml
backend/crates/runtime/src/: lib.rs
backend/crates/runtime/tests/: test_plan.rs
backend/crates/users/: Cargo.toml
backend/crates/users/src/: lib.rs
backend/crates/users/src/api/: auth.rs  mod.rs  websocket.rs
backend/crates/users/src/entities/: auth.rs  mod.rs  notification.rs  settings.rs  user.rs
backend/crates/users/src/repositories/: mod.rs  notification_repository.rs  session_repository.rs  settings_repository.rs  user_repository.rs
backend/crates/users/src/services/: auth.rs  auth_service.rs  mock_repositories.rs  mod.rs  notification_service.rs  session_service.rs  user_service.rs
backend/crates/users/src/types/: errors.rs  events.rs  mod.rs  requests.rs  responses.rs
backend/crates/users/src/utils/: jwt.rs  mod.rs  password.rs  validation.rs
backend/crates/users/tests/: integration_tests.rs  repository_tests.rs
backend/migrations/: 0001_init.sql  0002_add_chats_and_folders.sql  0003_add_multi_user_chat.sql  0004_add_message_role_and_model.sql  0005_major_schema_update_erd.sql  0006_fix_chats_schema.sql  0007_add_user_profile_fields.sql  0007_align_chat_invites_schema.sql
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/server/tests/: e2e.rs
backend/test-app/: Cargo.toml
backend/test-app/src/: main.rs
providers/: openrouter.json
