[workspace]
members = [
  "crates/auth",
  "crates/chats",
  "crates/config",
  "crates/database",
  "crates/orchestrator",
  "crates/backend-api",
  "crates/runtime",
  "crates/users",
  "server"
, "apps"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vincent Hengel"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
bytes = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }
rand = { version = "0.8", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
 sqlx = { version = "0.7", default-features = false, features = [
   "runtime-tokio",
   "tls-rustls",
   "any",
   "sqlite",
   "postgres",
   "macros",
   "migrate",
   "chrono"
 ] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
cuid2 = "0.1"
once_cell = "1.19"
config = { version = "0.14", default-features = false, features = ["json", "toml"] }
denkwerk = { git = "https://github.com/Force67/denkwerk", rev = "8962d23ebf44701839a2be2fc1e9fd6d83405c27" }
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio", "query", "multipart", "ws", "macros"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = "0.21"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"

