[package]
name = "switchboard-backend"
version = "0.1.0"
edition = "2021"
description = "Executable entrypoint for the Switchboard backend"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
switchboard-config = { path = "../crates/config" }
switchboard-backend-runtime = { path = "../crates/runtime" }
switchboard-backend-api = { path = "../crates/backend-api" }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
