[package]
name = "switchboard-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication services for the Switchboard backend"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cuid2 = { workspace = true }
once_cell = { workspace = true }
switchboard-config = { path = "../config" }
