[package]
name = "switchboard-backend-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API surface for the Switchboard backend"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
denkwerk = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
 sqlx = { workspace = true, default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
cuid2 = { workspace = true }
anyhow = { workspace = true }
switchboard-auth = { path = "../auth" }
switchboard-orchestrator = { path = "../orchestrator" }
tokio-tungstenite = { workspace = true }
redis = { workspace = true }
futures-util = { workspace = true }
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.0", features = ["axum"] }
