[package]
name = "switchboard-chats"
version = "0.1.0"
edition = "2021"
description = "Chat business logic and domain entities for Switchboard"
license = "MIT OR Apache-2.0"

[dependencies]
switchboard-database = { path = "../database" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
cuid2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
regex = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.12"