[package]
name = "switchboard-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
cuid2.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
switchboard-config = { path = "../config" }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"