[package]
name = "switchboard-orchestrator"
version = "0.1.0"
edition = "2021"
description = "LLM orchestration primitives for Switchboard"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
switchboard-config = { path = "../config" }
