[package]
name = "switchboard-backend-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime helpers for the Switchboard backend"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
switchboard-config = { path = "../config" }
switchboard-auth = { path = "../auth" }
switchboard-orchestrator = { path = "../orchestrator" }
switchboard-database = { path = "../database" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
