[package]
name = "switchboard-users"
version = "0.1.0"
edition = "2021"
description = "User management and authentication for Switchboard"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
cuid2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
regex = "1.0"
jsonwebtoken = "9.2"
oauth2 = { workspace = true, default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.12"